XMLtoCSV/objects/unpackaged/objects/Requirement_vod__c.object
<CustomObject>
    <description>PMO Toolkit - used to capture User, Business and Functional Requirements</description>
    <fields>
        <fullName>Actual_Adapt_Ongoing_Support__c</fullName>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Actual Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Build_Unit_Test__c</fullName>
        <label>Actual Build &amp; Unit Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Design__c</fullName>
        <label>Actual Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Requirements_Gathering__c</fullName>
        <label>Actual Requirements Gathering</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SIT__c</fullName>
        <label>Actual SIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Train_Deploy__c</fullName>
        <label>Actual Train/Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_UAT__c</fullName>
        <label>Actual UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Vendor_Enhancement_Reqmt_ID__c</fullName>
        <description>The Requirement: Requirement ID of the Vendor Enhancement that the Requirement is dependent on.  If Vendor Enhancement is completed then Associated Requirement should be met</description>
        <label>Associated Vendor Enhancement: Reqmt ID</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Assigned_to__c</fullName>
        <description>This field value contains the value to whom this CR is assigned.</description>
        <label>Assigned to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_ID__c</fullName>
        <description>Contains the Build ID component that the requirements are tied to</description>
        <inlineHelpText>Contains the Build ID component that the requirements are tied to</inlineHelpText>
        <label>Build ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Status__c</fullName>
        <label>Build Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Documentation Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE(
 Business_Benefit__c ,
 &quot;HIGH&quot; , 3,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 1,
0
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <inlineHelpText>Low: Does Not Drive Revenue or Reduce Costs 
Medium: Drives Revenue or Reduces Costs (quantify amount, if possible) 
High: Drives Revenue and Reduces Costs (quantify amount for both, if possible)</inlineHelpText>
        <label>Business Benefit</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Requirement_Area__c</fullName>
        <label>Business Requirement Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Requirement_ID__c</fullName>
        <label>Related Business Requirement ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <inlineHelpText>Defect: A known error in existing functionality 
Major: A significant release of capabilities 
Minor: An impactful release of functionality &amp; doesn&apos;t require training on new functionality
Ongoing Activity: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <label>Reason Closed/Deferred</label>
        <picklist>
            <controllingField>Status_PMO__c</controllingField>
            <picklistValues>
                <fullName>Deferred: Waiting Architecture Availabiity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Product Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Waiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Architecturally Not Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Canceled by Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Technically Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Existing Functionality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please insert Comments as follows:
&lt;Name&gt; - &lt;Date&gt; - &lt;Comments&gt;

If you are Closing a Requirement, please include the following:
- Decison Rationale
- Decision Date
- Decision Maker</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Count_of_Approved_Releases__c</fullName>
        <formula>IF( ISPICKVAL( Status_PMO__c , &quot;Approve: Approved to Deploy&quot;) , 1, 0)</formula>
        <label>Count of Approved Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Deployed_Requests__c</fullName>
        <formula>IF(ISPICKVAL( Status_PMO__c , &quot;Close: Deployed&quot;),1, 0)</formula>
        <label>Count of Deployed Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>Must Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nice to Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled for Future Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Integration_Complexity__c</fullName>
        <label>Data Integration Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Rationale__c</fullName>
        <label>Decision Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for the Design phase.</description>
        <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_ID__c</fullName>
        <label>Design ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Documentation Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Impact_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE(
 End_User_Impact__c ,
 &quot;HIGH&quot; , 1,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 3,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field.</inlineHelpText>
        <label>End User Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User_Impact__c</fullName>
        <inlineHelpText>Will Minimally Impact End Users (i.e., high degree of adoption achieved with little  to no effort)</inlineHelpText>
        <label>End User Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Request__c</fullName>
        <formula>IF(
AND(
INCLUDES(Impacted_Business__c , &quot;Primary Care&quot;), 
INCLUDES (Impacted_Business__c, &quot;Speciality&quot;), 
INCLUDES (Impacted_Business__c, &quot;Oncology&quot;), 
INCLUDES (Impacted_Business__c, &quot;EBPU&quot;), 
INCLUDES (Impacted_Business__c, &quot;P4&quot;)),  
1, 0)</formula>
        <label>Enterprise Request?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Build_Complete_Date__c</fullName>
        <description>Estimated date when this component of Build is completed and is ready for Code Review</description>
        <inlineHelpText>Estimated date when this component of Build is completed and is ready for Code Review</inlineHelpText>
        <label>Estimated Build Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimation_Assumptions__c</fullName>
        <inlineHelpText>Describe all assumptions made in order to estimate the Requirement. If contingency is used also describe how much and why.</inlineHelpText>
        <label>Estimation Assumptions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exploria_Complexity__c</fullName>
        <label>Exploria Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Business__c</fullName>
        <label>Impacted Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Group__c</fullName>
        <label>Impacted Group</label>
        <picklist>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA L3 Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Individual_Notified__c</fullName>
        <label>Individual Notified</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Priority__c</fullName>
        <label>Initial Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Rank__c</fullName>
        <label>Initial Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Compliance_Value__c</fullName>
        <formula>CASE( 
Legal_Compliance__c, 
 &quot;HIGH&quot; , 3,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal &amp; Compliance Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Compliance__c</fullName>
        <inlineHelpText>Required to Implement the Change to Stay Compliant with Federal Regulations</inlineHelpText>
        <label>Legal &amp; Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Business_Effort_Value__c</fullName>
        <formula>CASE(
Level_of_Business_Effort__c ,
 &quot;HIGH&quot; , 1,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 3,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the Level of Business Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Business Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Business_Effort__c</fullName>
        <inlineHelpText>Low: Requires More Than 20 Days of Business Work Effort
Medium: Requires 9 - 20 Days of Business Work Effort
High:Requires Less Than 8 Days of Business Work Effort</inlineHelpText>
        <label>Level of Business Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_IT_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of IT Effort formula field</description>
        <formula>if(Level_of_IT_Effort__c  = &quot;High&quot;,1,
if(Level_of_IT_Effort__c  = &quot;Medium&quot;,2,
If(Level_of_IT_Effort__c  = &quot;Low&quot;,3,
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of IT Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of IT Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_IT_Effort__c</fullName>
        <description>Level of IT Effort</description>
        <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;,
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;,
IF(TotEst__c &gt; 20.00, &quot;High&quot;,
&quot;Medium&quot;)))</formula>
        <inlineHelpText>Low: Requires More Than 20 Days of IT Work Effort
Medium: Requires 9 - 20 Days of IT Work Effort
High: Requires Less Than 8 Days of IT Work Effort</inlineHelpText>
        <label>Level of IT Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobility_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobility Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Business_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Business Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Requirements_Gathering_ID__c</fullName>
        <description>This is the Functional ID (FX.XX) for the requirement captured during earlier requirements gathering sessions. If this field is blank, then this requirement was documented during design or later stages.</description>
        <inlineHelpText>This is the Functional ID (FX.XX) for the requirement captured during earlier requirements gathering sessions. If this field is blank, then this requirement was documented during design or later stages.</inlineHelpText>
        <label>Original Requirements Gathering ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Veeva_Roadmap__c</fullName>
        <label>Potential Veeva Roadmap</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adverse Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics - VInsights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cycle Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Change Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Account Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Inquiry Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Channel Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administration</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Release_Date__c</fullName>
        <label>Production Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <description>Populate the Request Rationale field in order to capture the purpose of the requirement and the benefit it will serve.</description>
        <inlineHelpText>Populate the Request Rationale field in order to capture the purpose of the requirement and the benefit it will serve.</inlineHelpText>
        <label>Request Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <label>Regions Requesting</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Related_Requests__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to link duplicate requirements together or to group similar requirements.</inlineHelpText>
        <label>Related Requirements</label>
        <referenceTo>Requirement_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Requirement_ID__c</fullName>
        <label>Related User Requirement ID</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PMO Tool Kit Release</description>
        <label>Release</label>
        <referenceTo>Release_vod__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Number__c</fullName>
        <description>Removed from Release number.</description>
        <label>Removed From Which Release Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requests removed from a scheduled release.</description>
        <inlineHelpText>Indicate that a Request was removed from a Release only if it is removed after Design is complete.</inlineHelpText>
        <label>Removed from Release?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of days estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>